fix: scrolling issue on mobile

--- a/resources/assets/sass/custom.scss
+++ b/resources/assets/sass/custom.scss
@@ -43,6 +43,7 @@ body.modal-open {
 .app {
   position: relative;
   min-height: 100vh;
+  max-height: 100vh;
   overflow: auto;
 }
 
